Avoid text overflow at month list

--- a/app/style/base.css
+++ b/app/style/base.css
@@ -123,7 +123,7 @@ ol.months > li{
   padding: 0;
   height: 250px;
   font-size: 2em;
-  font-size: 2.5vw;
+  font-size: 1.5vw;
   font-weight: 600;
   color: rgba(0, 0, 0, .1);
 }
